actualizacion titulo index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comunidades Religiosas del Colegio San José - Tandil</title>
+    <title></title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -107,7 +107,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Listado de Profesores y Comunidades Religiosas del Colegio San José</h1>
+        <h1>Comunidades Religiosas del Colegio San José</h1>
         <p style="text-align: center; font-style: italic;">Comunidades Religiosas del Colegio San José</p>
 
         <div class="year-section">
