correcion hermanos index.html

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <h3>Director:</h3>
                     <ul>
                         <li>Hno. Dionisio Blanchoz</li>
-                        <li>Primer grado: H.H. Florentino Mena y Máximo Mollard</li>
+                        <li>Primer grado: Hno. Florentino Mena y Hno. Máximo Mollard</li>
                         <li>Segundo grado: Hno. Abel Vidal</li>
                         <li>Tercer grado “A”: Hno. Domingo Castrillo</li>
                         <li>Tercer grado “B”: Hno. Berchmans Silvestre.</li>
@@ -307,7 +307,7 @@
             <h2>Año 1920:</h2>
             <ul>
                 <li>Hno. Dionisio Pionchon. (Director General)</li>
-                <li>Primer grado:H.H. Florentino Mena y Máximo Mollard</li>
+                <li>Primer grado:Hno. Florentino Mena y Hno. Máximo Mollard</li>
                 <li>Segundo grado: Hno. Abel Bidal</li>
                 <li>Tercer grado”A”: Hno. Domingo Castrillo</li>
                 <li>Tercer grado “B”:Hno. Berchmans Silvestre</li>
